# food_additive_and_nutrition_scanner_app

./: .gitignore  README.md  architecture.md  runbook.md
docs/: implementation.md  requirements.md
etl/: README.md  __init__.py  build_pack.py  sign_pack.py  verify_pack.py
etl/data/: additives.csv  references.csv  region_rules.csv  synonyms.csv
etl/output/: meta.json  payload.json
keys/: README.md  public_key.ed25519
mobile/: .eslintrc.json  jest.config.js  package.json  tsconfig.json
mobile/src/data/: additiveStore.test.ts  additiveStore.ts  parser.test.ts  parser.ts  types.ts
mobile/src/data/__fixtures__/: pack.json
mobile/src/risk/: engine.test.ts  engine.ts
server/: README.md  pyproject.toml
server/app/: deps.py  main.py  models.py  pack_repository.py  settings.py
server/app/routers/: additives.py  packs.py  telemetry.py
server/app/tests/: conftest.py  test_api.py  test_pack_pipeline.py  test_pack_repository.py
