[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nutrition-scanner-server"
version = "0.1.0"
description = "FastAPI backend for nutrition scanner packs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111",
  "uvicorn>=0.23",
  "pydantic>=2.0,<3.0",
  "python-multipart>=0.0.6",
  "PyNaCl>=1.5"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "httpx>=0.27",
  "PyNaCl>=1.5"
]
